# parallel_local_cd_thesis

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  road_traffic_T100.txt
google_test/: CMakeLists.txt  test1.cpp
google_test/UnitTestInputs/: input1  input2  input3
include/adj_list/: adj_list.cpp  adj_list.h
include/adj_listweight/: CMakeLists.txt  adj_listweight.cpp  adj_listweight.h
include/dyncomm/: CMakeLists.txt  DynCommDriver.cpp  Prune.cpp  PruneRunner.cpp  RealPruneContainer.cpp  TemporalNode.cpp  TemporalWeightedMinhashGadget.cpp
